<resources>
    <string name="app_name">TickTackTock</string>
    <string name="start_btn">計時</string>
    <string name="stop_btn">結束</string>
    <string name="general">General</string>
    <string name="tomato">Tomato</string>
    <string name="計時">計時</string>
    <string name="停止">停止</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirmTitle">確 認</string>
    <string name="menu_login">登入</string>
    <string name="menu_home">計時器</string>
    <string name="menu_todolist">To Do List</string>
    <string name="menu_readtime">讀書時間</string>
    <string name="menu_setting">設定</string>
    <string name="action_about">關於</string>
    <string name="drawer_open">openes</string>
    <string name="drawer_close">closed</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>