<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/todolist"
            android:icon="@drawable/ic_to_do_list"
            android:title="@string/menu_todolist" />
        <item
            android:id="@+id/studytime"
            android:icon="@drawable/ic_reading_time"
            android:title="@string/menu_readtime" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/web"
            android:icon="@drawable/ic_web"
            android:title="Google" />
    </group>
</menu>
