<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TomatoClockActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat"
            app:liftOnScroll="true">
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mytoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="番茄模式"
            app:navigationIcon="@android:drawable/ic_menu_sort_by_size"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:titleTextAppearance="@style/Toolbar.TitleText">
        </com.google.android.material.appbar.MaterialToolbar>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/generalTimer_btn"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:textSize="12sp"
                android:text="@string/general"
                android:textColor="#FF424242"
                android:background="@drawable/button_left" />

            <Button
                android:id="@+id/tomatoClock_btn"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/tomato"
                android:textSize="12sp"
                android:textColor="#FF424242"
                android:layout_marginTop="65dp"
                android:background="@drawable/button_right"
                android:layout_toEndOf="@id/generalTimer_btn" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/clockPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp">

            <!--background為進度條(黃色) // progressDrawable會隨著progress變化的圓圈(灰色)-->
            <com.GraduateProject.TimeManagementApp.RingProgressBar
                android:id="@+id/progressBarStudy"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <com.GraduateProject.TimeManagementApp.AnalogClockStyle
                android:id="@+id/clock"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                android:src="@drawable/clock" />
        </RelativeLayout>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/tstart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:text="@string/計時"
                android:visibility="gone"
                app:backgroundTint="#DAFAC3" />

            <Button
                android:id="@+id/tstop_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/停止"
                android:layout_marginTop="45dp"
                android:visibility="gone"
                app:backgroundTint="#FAC3C3"/>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/nav_menuitem" />
</androidx.drawerlayout.widget.DrawerLayout>